[package]
name = "binlog-cdc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
futures-util = "0.3.31"
mysql-binlog-connector-rust = "0.3.3"
prometheus-client = "0.24.0"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
regex = "1.12.2"
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlparser = { version = "0.59.0", features = ["serde", "visitor"] }
sqlx = { version = "0.8.6", features = [
    "mysql",
    "runtime-tokio",
    "tls-native-tls",
] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"

[profile.dev]
opt-level = 0

[profile.release]
panic = 'abort'
codegen-units = 1
strip = true
lto = true
opt-level = 3
