[workspace]
members = ["binlog-file-rs", "flink-cdc-rs", "source-sink"]

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
chrono = "0.4.42"
tikv-jemallocator = { version = "0.6", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
hashbrown = "0.16"
