[package]
name = "source-sink"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rskafka = "0.6"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "tls-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.5"
moka = { version = "0.12", features = ["future"] }
futures-util = "0.3"
